profile + admin page start

--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ body {
     vertical-align: middle;
 }
 
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: #878787;
+    text-align: center;
+}
+
 .navigation {
     float: right;
     height: 100%;
@@ -108,7 +117,7 @@ H3 {
 .formbox p {
     margin: 0;
     padding: 0;
-     font-weight: bold;
+    font-weight: bold;
     text-align: left;
     TEXT-INDENT: 0;
     /*font-size: 11pt;*/
@@ -166,7 +175,6 @@ H3 {
     font-size: 16px;
     font-family: "font", serif;
 }
-
 
 
 @media screen and (max-device-width: 1280px) {
