--- a/css/intro.css
+++ b/css/intro.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    background-size: cover;
+    /*width: 100%;*/
+    /*height: 100%;*/
+    background-size: 100% 100%;
     background: url(../assets/bkg.svg) center;
     font-family: "font", sans-serif;
 }
