--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body {
 td {
     text-align: center;
     vertical-align: middle;
+    display: none;
 }
 
 H3 {
@@ -62,6 +63,10 @@ H3 {
     LINE-HEIGHT: 120%;
     MARGIN-RIGHT: 36px;
     FONT-FAMILY: font, serif;
+    TEXT-ALIGN: center
+}
+
+H2 {
     TEXT-ALIGN: center
 }
 
