--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ input[type="email"] {
         margin: 0;
         padding: 0;
         /* background: url(/assets/bkg.svg); */
-        background-color: #85dbfe;
+        background-color: #ffffff;
         background-size: cover;
         background-position: center;
         font-family: sans-serif;
