--- a/css/header.css
+++ b/css/header.css
@@ -12,10 +12,14 @@
     background-color: #ff63ca;
 }
 
+.headermob {
+    display: none;
+}
+
 .inner_header {
     width: 60%;
     height: 100%;
-    display: block;
+    /*display: block;*/
     margin: 0 auto;
     float: right;
     /* background-color: aqua; */
@@ -40,20 +44,19 @@
     float: right;
     height: 100%;
     margin: 0;
-
 }
 
-.navigation a {
-    text-decoration: none;
+.navigation li {
     height: 100%;
     display: table;
     float: left;
-    padding: 0 20px;
     background-color: #ff63ca;
 }
 
-.navigation a li {
+.navigation li a {
+    text-decoration: none;
     display: table-cell;
+    padding: 0 20px;
     vertical-align: middle;
     height: 100%;
     font-size: 13pt;
@@ -63,7 +66,9 @@
 }
 
 .navigation a:hover {
+    TEXT-DECORATION: none;
     background-color: #ff00a8;
+
 
 }
 
