--- a/css/header.css
+++ b/css/header.css
@@ -74,69 +74,12 @@
 
 @media screen and (max-device-width: 1280px) {
 
-    .headerdesk {
-        display: none;
-    }
+    /*.headerdesk {*/
+    /*    display: none;*/
+    /*}*/
 
     .headermob {
         display: contents;
     }
 
-    nav {
-        background: #ff63ca;
-        height: 100px;
-        width: 100%;
-    }
-
-    nav ul {
-        float: right;
-    }
-
-    a.active, a:hover {
-        background: #ff63ca;
-        transition: .5s;
-    }
-
-    .checkbtn {
-        font-size: 50px;
-        color: #fec2fb;
-        float: right;
-        cursor: pointer;
-        /*size: 100%;*/
-        margin-right: 15px;
-    }
-
-    /*#check {*/
-    /*    display: none;*/
-    /*}*/
-}
-@media (max-width: 500px){
-    nav ul li a{
-        font-size:16px;
-    }
-}
-@media (max-width: 500px){
-    .checkbtn{
-        display: block;
-    }
-    ul{
-        positin: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #fec2fb;
-        transition: all .5s;
-    }
-    nav ul li{
-        display: block;
-    }
-    nav ul li a{
-        font-size: 20px;
-    }
-    a:hover,a.active{
-        /*background: block;*/
-        color: #ff00a8;
-    }
-    #check:checked ~ ul{
-        left: 0;
-    }
 }
